PR comments 2